assets/css/screen.css
/* ... */
.social-links.light-background .social-link svg {
    fill: color(var(--science-joy-primary));
}


.social-link img {
    height: 1em;
}

.social-link:hover {
    opacity: 1;
}

.social-link svg {
    height: 1.8rem;
    fill: #fff;
}

.social-link-fb svg {
    height: 1.5rem;
}

.social-link-wb svg {
    height: 1.6rem;
}

.social-link-wb svg path {
    stroke: #fff;
}

.social-link-rss svg {
    height: 1.9rem;
}

.subscribe-button {
    display: block;
    padding: 4px 10px;
    border: #fff 1px solid;
    color: #fff;
    font-size: 1.2rem;
    line-height: 1em;
    border-radius: 10px;
    opacity: 0.8;
}

.subscribe-button:hover {
    text-decoration: none;
    opacity: 1;
}

.rss-button {
    opacity: 0.8;
}

.rss-button:hover {
    opacity: 1;
}

.rss-button svg {
    margin-bottom: 1px;
    height: 2.1rem;
    fill: #fff;
}

@media (max-width: 700px) {
    .site-header {
        padding-right: 0;
        padding-left: 0;
    }
    .site-nav-left {
        margin-right: 0;
        padding-left: 4vw;
    }
    /* .site-nav-right {
        display: none;
    } */
}


/* 6. Post Feed
/* ---------------------------------------------------------- */

.post-feed {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    margin: 0 -20px;
    padding: 40px 0 0 0;
}

.post-card {
    flex: 1 1 300px;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    margin: 0 20px 40px;
    min-height: 300px;
    background: #fff center center;
    background-size: cover;
    border-radius: 5px;
    box-shadow: rgba(39,44,49,0.06) 8px 14px 38px, rgba(39, 44, 49, 0.03) 1px 3px 8px;
    transition: all 0.5s ease;
}

.post-card:hover {
    box-shadow: 0 0 1px rgba(39,44,49,0.10), 0 3px 16px rgba(39, 44, 49,0.07);
    transition: all 0.3s ease;
    transform: translate3D(0, -1px, 0);
}

.post-card-image-link {
    position: relative;
    display: block;
    overflow: hidden;
    border-radius: 5px 5px 0 0;
}

.post-card-image {
    width: auto;
    height: 200px;
    background: var(--lightgrey) no-repeat center center;
    background-size: cover;
}

.post-card-content-link {
    position: relative;
    display: block;
    padding: 25px 25px 0;
    color: var(--darkgrey);
}

.post-card-content-link:hover {
    text-decoration: none;
}

.post-card-tags {
    display: block;
    margin-bottom: 4px;
    color: var(--midgrey);
    font-size: 1.2rem;
    line-height: 1.15em;
    font-weight: 500;
    letter-spacing: 0.5px;
    text-transform: uppercase;
}

.post-card-title {
    margin-top: 0;
}

.post-card-content {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.post-card-excerpt {
    font-family: Georgia, serif;
}

.post-card-meta {
    padding: 0 25px 25px;
}

.author-profile-image {
    margin-right: 5px;
    width: 25px;
    height: 25px;
    border-radius: 100%;

    object-fit: cover;
}

.post-card-author {
    font-size: 1.3rem;
    font-weight: 500;
    letter-spacing: 0.5px;
    text-transform: uppercase;
}

.reading-time {
    /* TODO: nos interesa esto? */
    display: none;
    font-size: 1.2rem;
    font-weight: 500;
    line-height: 33px;
    flex-shrink: 0;
    margin-left: 20px;
    letter-spacing: .5px;
    text-transform: uppercase;
    float: right;
    margin-top: -4px;
    color: var(--midgrey);
}

/* Special Styling for home page grid (below):

The first (most recent) post in the list is styled to be bigger than the others and take over the full width of the grid to give it more emphasis. Wrapped in a media query to make sure this only happens on large viewports / desktop-ish devices.

 */

@media (min-width: 795px) {
    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) {
        flex: 1 1 100%;
        flex-direction: row;
    }

    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-image-link {
        position: relative;
        flex: 1 1 auto;
        border-radius: 5px 0 0 5px;
    }

    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-image {
        position: absolute;
        width: 100%;
        height: 100%;
    }

    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-content {
        flex: 0 1 357px;
    }

    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) h2 {
        font-size: 2.6rem;
    }

    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) p {
        font-size: 1.8rem;
        line-height: 1.55em;
    }

    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-content-link {
        padding: 30px 40px 0;
    }

    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-meta {
        padding: 0 40px 30px;
    }
}

.home-template .site-header:after {
    display: none;
}


/* Adjust some margins for smaller screens */
@media (max-width: 650px) {
    .post-feed {
        padding-top: 5vw;
    }
    .post-card {
        margin: 0 20px 5vw;
    }
}



/* 7. Single Post
/* ---------------------------------------------------------- */

.post-template .site-main,
.page-template .site-main {
    padding-bottom: 4vw;
    background: #fff;
}

.post-full {
    position: relative;
    z-index: 50;
}
/* ^ Required to make .post-full-content:before/after z-index stacking work */

.post-full-header {
    margin: 0 auto;
    padding: 6vw 3vw 3vw;
    max-width: 1040px;
    text-align: center;
}
@media (max-width: 500px) {
    .post-full-header {
        padding: 14vw 3vw 10vw;
    }
}

.post-full-meta {
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--midgrey);
    font-size: 1.4rem;
    font-weight: 600;
    text-transform: uppercase;
}

.post-full-meta-date {
    color: var(--blue);
}

.post-full-title {
    margin: 0;
    color: color(var(--darkgrey) l(-5%));
}

.date-divider {
    display: inline-block;
    margin: 0 6px 1px;
}
/* ... */

